Create persistence layer

--- a/Polls.Service/appsettings.json
+++ b/Polls.Service/appsettings.json
@@ -9,5 +9,8 @@
   "Auth0": {
     "Domain": "dev-afak1lol.us.auth0.com",
     "Audience": "polls-api-identifier"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source=PollsApiDatabase.db"
   }
 }
