--- a/Polls.Service/Polls.Service.csproj
+++ b/Polls.Service/Polls.Service.csproj
@@ -9,11 +9,13 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.5" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational.Design.Specification.Tests" Version="2.0.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Polls.Application\Polls.Application.csproj" />
+      <ProjectReference Include="..\Polls.Infrastructure\Polls.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
