Replace MediatR with Mediator

--- a/Polls.Application/Polls.Application.csproj
+++ b/Polls.Application/Polls.Application.csproj
@@ -9,8 +9,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="MediatR" Version="10.0.1" />
-        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+        <PackageReference Include="Mediator.Abstractions" Version="2.1.0-preview.2" />
+        <PackageReference Include="Mediator.SourceGenerator" Version="2.1.0-preview.2">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
