Move Swagger registration to EndpointDefinition

--- a/Polls.Service/Properties/launchSettings.json
+++ b/Polls.Service/Properties/launchSettings.json
@@ -11,6 +11,7 @@
   "profiles": {
     "Polls.Application": {
       "commandName": "Project",
+      "hotReloadProfile": "aspnetcore",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
