--- a/Polls.Application/Polls.Application.csproj
+++ b/Polls.Application/Polls.Application.csproj
@@ -10,12 +10,20 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentAssertions" Version="6.8.0" />
+        <PackageReference Include="FluentAssertions.Json" Version="6.1.0" />
+        <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.4.0" />
         <PackageReference Include="Mediator.Abstractions" Version="2.1.0-preview.2" />
         <PackageReference Include="Mediator.SourceGenerator" Version="2.1.0-preview.2">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    </ItemGroup>
+    
+    <ItemGroup>
+        <InternalsVisibleTo Include="Polls.UnitTests" />
     </ItemGroup>
 
     <ItemGroup>
