Add Exercises table

--- a/Gymmer.Service/appsettings.json
+++ b/Gymmer.Service/appsettings.json
@@ -11,6 +11,6 @@
     "Audience": "polls-api-identifier"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=PollsApiDatabase.db"
+    "DefaultConnection": "Data source=GymmerApiDatabase.db"
   }
 }
