--- a/Gymmer.Core/Gymmer.Core.csproj
+++ b/Gymmer.Core/Gymmer.Core.csproj
@@ -8,13 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0-rc.1.22426.10" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0-rc.1.22426.10"/>
+        <PackageReference Include="Microsoft.AspNetCore.App" Version="7.0.0"/>
     </ItemGroup>
-
-    <ItemGroup>
-      <Reference Include="Microsoft.AspNetCore">
-        <HintPath>C:\Program Files\dotnet\shared\Microsoft.AspNetCore.App\7.0.0\Microsoft.AspNetCore.dll</HintPath>
-      </Reference>
-    </ItemGroup>
-
 </Project>
