--- a/Gymmer.Service/appsettings.Development.json
+++ b/Gymmer.Service/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=PollsApiDatabase.db"
+    "DefaultConnection": "Data source=GymmerApiDatabase.db"
   }
 }
