--- a/Gymmer.Core/Gymmer.Core.csproj
+++ b/Gymmer.Core/Gymmer.Core.csproj
@@ -7,10 +7,14 @@
         <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <NoWarn>1701;1702;IL2121;NU1803</NoWarn>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="FluentValidation" Version="11.4.0" />
         <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-        <PackageReference Include="Microsoft.AspNetCore.App" Version="7.0.0" />
+        <FrameworkReference Include="Microsoft.AspNetCore.App" Version="7.0.0" />
     </ItemGroup>
 </Project>
