--- a/Gymmer.UnitTests/Gymmer.UnitTests.csproj
+++ b/Gymmer.UnitTests/Gymmer.UnitTests.csproj
@@ -12,6 +12,10 @@
         <RootNamespace>Gymmer.UnitTests</RootNamespace>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <NoWarn>1701;1702;IL2121;NU1803</NoWarn>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
         <PackageReference Include="NSubstitute" Version="4.4.0" />
