--- a/Gymmer.Application/Gymmer.Application.csproj
+++ b/Gymmer.Application/Gymmer.Application.csproj
@@ -9,6 +9,10 @@
         <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <NoWarn>1701;1702;IL2121;NU1803;IL2121</NoWarn>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="6.8.0" />
         <PackageReference Include="FluentAssertions.Json" Version="6.1.0" />
