--- a/Gymmer.Infrastructure/Gymmer.Infrastructure.csproj
+++ b/Gymmer.Infrastructure/Gymmer.Infrastructure.csproj
@@ -9,6 +9,10 @@
         <RootNamespace>Gymmer.Infrastructure</RootNamespace>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <NoWarn>1701;1702;IL2121;NU1803</NoWarn>
+    </PropertyGroup>
+
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational.Design.Specification.Tests" Version="2.0.3" />
