--- a/Gymmer.Service/Properties/launchSettings.json
+++ b/Gymmer.Service/Properties/launchSettings.json
@@ -9,11 +9,11 @@
     }
   },
   "profiles": {
-    "Polls.Application": {
+    "Gymmer.Service": {
       "commandName": "Project",
       "hotReloadProfile": "aspnetcore",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7192;http://localhost:5192",
       "environmentVariables": {
