Add tests for ValidationMessageExtensions, make messages classes sealed

--- a/Gymmer.UnitTests/Gymmer.UnitTests.csproj
+++ b/Gymmer.UnitTests/Gymmer.UnitTests.csproj
@@ -35,4 +35,8 @@
       <ProjectReference Include="..\Gymmer.Core\Gymmer.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="EndpointDefinitions" />
+    </ItemGroup>
+
 </Project>
