--- a/Gymmer.Application/Gymmer.Application.csproj
+++ b/Gymmer.Application/Gymmer.Application.csproj
@@ -35,4 +35,8 @@
       <ProjectReference Include="..\Gymmer.Infrastructure\Gymmer.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="EndpointDefinitions\TrainingDefinition" />
+    </ItemGroup>
+
 </Project>
