--- a/Gymmer.DependencyValidationTests/Gymmer.DependencyValidationTests.csproj
+++ b/Gymmer.DependencyValidationTests/Gymmer.DependencyValidationTests.csproj
@@ -2,10 +2,15 @@
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
+        <LangVersion>11.0</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
 
         <IsPackable>false</IsPackable>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <NoWarn>1701;1702;IL2121;NU1803</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
