--- a/Gymmer.Service/Properties/launchSettings.json
+++ b/Gymmer.Service/Properties/launchSettings.json
@@ -1,11 +1,17 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:42488",
-      "sslPort": 44363
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url":  "http://0.0.0.0:5192"
+      },
+      "Https": {
+        "Url": "https://0.0.0.0:7192"
+      }
+    },
+    "EndpointDefaults": {
+      "Url": "https://0.0.0.0:7192",
+      "Protocols": "Http1"
     }
   },
   "profiles": {
