Move Kestrel configuration to correct place, change Microsoft logging to "Information"

--- a/Gymmer.Service/appsettings.json
+++ b/Gymmer.Service/appsettings.json
@@ -1,8 +1,22 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url":  "http://0.0.0.0:5192"
+      },
+      "Https": {
+        "Url": "https://0.0.0.0:7192"
+      }
+    },
+    "EndpointDefaults": {
+      "Url": "https://0.0.0.0:7192",
+      "Protocols": "Http1"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning"
+      "Microsoft": "Information"
     }
   },
   "AllowedHosts": "*",
