Add volumes binding in docker-compose.yml file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,16 @@
-version: '3.8'
+version: '3.9'
 
 services:
   gymmer-api:
+    build: .
     image: gymmer-api:latest
     container_name: gymmer-api
     tty: true
-#    entrypoint: /bin/bash
+    entrypoint: dotnet watch run --project Gymmer.Service
+    volumes:
+      - type: bind
+        source: D:/repos/GymmerApi
+        target: /gymmer-api
     ports:
       - "5192:5192"
       - "7192:7192"
