--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,12 @@ services:
       - /bin/bash
       - -c
       - |
+        dotnet restore
         dotnet watch run --project Gymmer.Service
+    working_dir: /gymmer-api
     volumes:
        - ~/.aspnet/https:/https:ro
+       - D:/repos/GymmerApi:/gymmer-api
     ports:
       - "5192:5192"
       - "7192:7192"
