Provide common 1.1.1.1 dns resolver to docker-compose.yml to enable reaching external sites

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     volumes:
        - ~/.aspnet/https:/https:ro
        - D:/repos/GymmerApi:/gymmer-api
+    dns:
+       - 1.1.1.1
     ports:
       - "5192:5192"
       - "7192:7192"
