Create folder for dockerfiles to enable usage of multiple images in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: '3.9'
 
 services:
   gymmer-api:
-    build: .
-    image: gymmer-api:latest
+    build: /docker/api/.
     container_name: gymmer-api
     tty: true
     entrypoint:
