--- a/Gymmer.Service/Gymmer.Service.csproj
+++ b/Gymmer.Service/Gymmer.Service.csproj
@@ -27,4 +27,10 @@
       <ProjectReference Include="..\Gymmer.Infrastructure\Gymmer.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="..\docker-compose.yml">
+        <Link>docker-compose.yml</Link>
+      </Content>
+    </ItemGroup>
+
 </Project>
