Return Id while getting training definitions or exercise options, fix tests, add automatic dotnet watch restart on rude edit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=https://+:7192;http://+:5192
+      - DOTNET_WATCH_RESTART_ON_RUDE_EDIT=true
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
       - ASPNETCORE_Kestrel__Certificates__Default__Password=TestPassword
         
